<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Shimmer</string>
    <string name="wallpaper_description">Display your photos with smooth GPU effects and parallax scrolling</string>
    <string name="shortcut_next_image_short_label">Next Image</string>
    <string name="shortcut_next_image_long_label">Show the next wallpaper image</string>
    <string name="shortcut_random_duotone_short_label">Random Duotone</string>
    <string name="shortcut_random_duotone_long_label">Apply a random duotone preset</string>
    <string name="shortcut_add_to_favorites_short_label">Add to Favorites</string>
    <string name="shortcut_add_to_favorites_long_label">Save current wallpaper to favorites</string>
    <string name="toast_favorite_saved">Saved to favorites: %1$s</string>
</resources>
